Fixed light/dark mode toggle to header.

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -45,6 +45,7 @@ a {
     cursor: pointer;
     border-radius: 50%;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    position: fixed;
 }
 
 .header {
